# swrip-1.5

./: .gitignore  CMakeLists.txt  README.md  knownbugs.txt  make_lookup_table.py  startup  startval  swrip  winstart.bat
libs/colorparser/: CMakeLists.txt  README.md  smaug2ansi.cpp  smaug2ansi.hpp
libs/colorparser/src/: colorparser.cpp  passthrough.cpp  smaug2ansi.cpp  smaug2html.cpp  smaug_stripper.cpp
libs/imp/: CMakeLists.txt  README.md
libs/imp/interpreter/: CMakeLists.txt  experimentallibrary.cpp  experimentallibrary.hpp  main.cpp
libs/imp/scripts/: python.py
libs/imp/src/: tokenkind.cpp  utility.cpp
libs/imp/test/: CMakeLists.txt
libs/utility/: CMakeLists.txt  Makefile  README.md  algorithms.hpp  bet.cpp  linkedlist.hpp  logger.hpp  os_win32.cpp  os_win32.hpp  repository.hpp  utility.hpp
libs/utility/src/: bet.cpp  file_io.cpp  linkedlist.cpp  misc.cpp  oldrepository.cpp  os_posix.cpp  os_win32.cpp  random.cpp  repositorybase.cpp  sha256.cpp  string_handling.cpp  (+2 more)
src/: CMakeLists.txt  Makefile  Makefile-win  SCOptions  SMakefile  act.cpp  act.hpp  act_comm.c  act_comm.cpp  act_info.c  act_info.cpp  act_move.c  act_move.cpp  act_obj.c  act_obj.cpp  act_wiz.c  act_wiz.cpp  algocallbacks.c  algocallbacks.h  alias.c  alias.cpp  alias.h  alias.hpp  area.c  area.cpp  area.h  area.hpp  areasavehelper.cpp  areasavehelper.hpp  areasavehelperbuiltin.cpp  areasavehelperbuiltin.hpp  areasavehelperplugin.cpp  areasavehelperplugin.hpp  arena.c  arena.cpp  arena.h  arena.hpp  badname.c  badname.cpp  badname.h  (+210 more)
src/commands/: SMakefile  SMakefile_a  SMakefile_b  SMakefile_c  SMakefile_d  SMakefile_e  SMakefile_f  SMakefile_g  SMakefile_h  SMakefile_i  SMakefile_j  SMakefile_k  SMakefile_l  SMakefile_m  SMakefile_n  SMakefile_o  SMakefile_p  SMakefile_q  SMakefile_r  SMakefile_s  SMakefile_t  SMakefile_u  SMakefile_v  SMakefile_w  SMakefile_y  SMakefile_z  aassign.c  aassign.cpp  accelerate.c  accelerate.cpp  accept.c  accept.cpp  addbounty.c  addbounty.cpp  addpatrol.c  addpatrol.cpp  addpilot.c  addpilot.cpp  addresident.c  addresident.cpp  (+960 more)
src/impscript/: characters_func.cpp  characters_func.hpp  echo_func.cpp  echo_func.hpp  echoaround_func.cpp  echoaround_func.hpp  exit_func.cpp  exitexception.hpp  imp.cpp  imp.hpp  impcharacter.cpp  impcharacter.hpp  impobject.cpp  impobject.hpp  improom.cpp  improom.hpp  inroom_func.cpp  isnpc_func.cpp  isnpc_func.hpp  mudlibrary.cpp  mudlibrary.hpp  objects_func.cpp  objects_func.hpp  random_func.cpp  say_func.cpp  say_func.hpp  scriptrunner.cpp  scriptrunner.hpp  scriptscheduler.cpp  scriptscheduler.hpp  threaddatavalue.cpp  threaddatavalue.hpp  vnum_func.cpp  wait_func.cpp  wait_func.hpp
src/mpcommands/: SMakefile  mpapply.c  mpapply.cpp  mpapplyb.c  mpapplyb.cpp  mpasound.c  mpasound.cpp  mpat.c  mpat.cpp  mpclosepassage.c  mpclosepassage.cpp  mpdamage.c  mpdamage.cpp  mpdeposit.c  mpdeposit.cpp  mpdream.c  mpdream.cpp  mpecho.c  mpecho.cpp  mpechoaround.c  mpechoaround.cpp  mpechoat.c  mpechoat.cpp  mpforce.c  mpforce.cpp  mpgain.c  mpgain.cpp  mpgoto.c  mpgoto.cpp  mpinvis.c  mpinvis.cpp  mpjunk.c  mpjunk.cpp  mpkill.c  mpkill.cpp  mpmload.c  mpmload.cpp  mpnothing.c  mpnothing.cpp  mpoload.c  (+14 more)
src/repos/: arearepository.cpp  arearepository.hpp  badnamerepository.cpp  badnamerepository.hpp  banrepository.cpp  banrepository.hpp  boardrepository.cpp  boardrepository.hpp  bountyrepository.cpp  bountyrepository.hpp  clanrepository.cpp  clanrepository.hpp  descriptorrepository.cpp  descriptorrepository.hpp  dirty.cpp  fs_imprepository.cpp  fs_imprepository.hpp  helprepository.cpp  helprepository.hpp  homerepository.hpp  imprepository.hpp  legacy_arearepository.cpp  legacy_arearepository.hpp  lua_arearepository.cpp  lua_arearepository.hpp  lua_arenarepository.cpp  lua_homerepository.cpp  lua_homerepository.hpp  lua_macrorepository.cpp  lua_macrorepository.hpp  lua_storeroomrepository.cpp  lua_storeroomrepository.hpp  lua_vendorrepository.cpp  lua_vendorrepository.hpp  macrorepository.hpp  objectrepository.cpp  objectrepository.hpp  planetrepository.cpp  planetrepository.hpp  playerrepository.cpp  (+16 more)
src/special/: SCOptions  SMakefile  auth.c  auth.cpp  clanguard.c  clanguard.cpp  customsalcohol.c  customsalcohol.cpp  customssmut.c  customssmut.cpp  customsspice.c  customsspice.cpp  customsweapons.c  customsweapons.cpp  darkjedi.c  darkjedi.cpp  fido.c  fido.cpp  guardian.c  guardian.cpp  janitor.c  janitor.cpp  jedi.c  jedi.cpp  jedihealer.c  jedihealer.cpp  newbiepilot.c  newbiepilot.cpp  poison.c  poison.cpp  police.c  police.cpp  policeattack.c  policeattack.cpp  policefine.c  policefine.cpp  policejail.c  policejail.cpp  policeundercover.c  policeundercover.cpp  (+7 more)
src/spells/: SMakefile  acetumprimus.c  acidblast.c  acidbreath.c  affect.c  affect.cpp  affectchar.c  affectchar.cpp  animatedead.c  areaattack.c  areaattack.cpp  attack.c  attack.cpp  blackfist.c  blackhand.c  blacklightning.c  blacklightning.cpp  blindness.c  blindness.cpp  burninghands.c  calllightning.c  causecritical.c  causecritical.cpp  causelight.c  causelight.cpp  causeserious.c  causeserious.cpp  causticfount.c  changesex.c  charmperson.c  charmperson.cpp  chilltouch.c  colourspray.c  controlweather.c  createfood.c  createmob.c  createmob.cpp  createobj.c  createobj.cpp  createwater.c  (+83 more)
src/swr_support/: Makefile  Makefile.MOS  SMakefile  buffer.c  buffer.h  file_io.c  hashstr.c  misc.c  os.h  os_amiga.c  os_amiga.h  os_unix.c  os_unix.h  os_win32.c  os_win32.h  sha256.c  string_handling.c  swr_support.h  time_fun.c  vector3.c  vector3.h
src/test/: CMakeLists.txt  Makefile  alias_tests.cpp  craft_tests.cpp  datadomtests.cpp  main.cpp  savers.lua
src/utility/: Makefile  bet.c  buffer.c  buffer.h  file_io.c  hashstr.c  misc.c  os.h  os_amiga.c  os_posix.h  os_unix.c  os_win32.c  sha256.c  string_handling.c  swr_support.h  time_fun.c  utility.h
test/: .gitignore  CMakeLists.txt  Makefile  datadomtests.cpp  main.cpp
test/src/: alias_tests.cpp  arraydatatests.cpp  craft_tests.cpp  fakelogger.hpp  flag_tests.cpp  lua_tests.cpp  main.cpp  mudprog_tests.cpp
(+1313 files in other folders)
