cmake_minimum_required(VERSION 2.8.9)
project(swrip)
include_directories(src)
set(PROJECT_LINK_LIBS libmud.so liblua.so)
link_directories(src)
set(CMAKE_BUILD_TYPE Debug)
set(GCC_WARNING_FLAGS "-Wall -Wshadow -Wformat-security -Winline -Wpointer-arith -Wcast-align -Wredundant-decls -Werror -Wwrite-strings -Wextra -Wno-char-subscripts -Wno-unused-parameter -Wno-implicit-fallthrough")
set(GCC_STD_FLAG "-std=c++14")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_WARNING_FLAGS} ${GCC_STD_FLAG}")
add_executable(swrip main.cpp)
target_link_libraries(swrip ${PROJECT_LINK_LIBS})
add_subdirectory(src)
add_subdirectory(libs/colorparser)
add_subdirectory(libs/utility)
