cmake_minimum_required(VERSION 3.10)
project(swrip)
include_directories(src libs/colorparser/include libs/utility/include libs/3rdparty/lua)
link_directories(src libs/colorparser libs/utility libs/3rdparty/lua)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
enable_testing()

add_executable(swrip $<TARGET_OBJECTS:mud> bootstrap/main.cpp)
target_compile_features(swrip PRIVATE cxx_std_17)
target_compile_options(swrip
  PRIVATE $<$<CXX_COMPILER_ID:GNU>:-DHAVE_ZLIB -DHAVE_UNAME -Werror -Wall -Wformat-security -Wshadow -Winline -Wpointer-arith -Wcast-align -Wredundant-decls -Wextra -Wno-unused-parameter -Wno-implicit-fallthrough -Wno-sign-compare -Wno-write-strings -Wno-format-truncation>
  PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/D_CRT_SECURE_NO_WARNINGS /D_CRT_NONSTDC_NO_DEPRECATE /wd4244 /wd4996 /wd6262 /wd26451>
  )

add_library(mud OBJECT
  src/act_comm.cpp
src/act_info.cpp
src/act_move.cpp
src/act_obj.cpp
src/act_wiz.cpp
src/alias.cpp
src/area.cpp
src/arena.cpp
src/badname.cpp
src/board.cpp
src/bounty.cpp
src/build.cpp
src/character.cpp
src/clan.cpp
src/command.cpp
src/comm.cpp
src/comments.cpp
src/const.cpp
src/copyover.cpp
src/craft.cpp
src/db.cpp
src/descriptor.cpp
src/editor.cpp
src/fight.cpp
src/fslogger.cpp
src/grub.cpp
src/handler.cpp
src/help.cpp
src/imc.cpp
src/interp.cpp
src/magic.cpp
src/makeobjs.cpp
src/mapper.cpp
src/misc.cpp
src/missile.cpp
src/mprog.cpp
src/mud_prog.cpp
src/nanny.cpp
src/object.cpp
src/pcdata.cpp
src/planet.cpp
src/protomob.cpp
src/protoobject.cpp
src/reset.cpp
src/room.cpp
src/save.cpp
src/script.cpp
src/ship.cpp
src/shop.cpp
src/shuttle.cpp
src/skill.cpp
src/skills.cpp
src/social.cpp
src/spaceobject.cpp
src/systemdata.cpp
src/tables.cpp
src/track.cpp
src/turret.cpp
src/update.cpp
src/vector3_aux.cpp
src/commands/aassign.cpp
src/commands/accelerate.cpp
src/commands/accept.cpp
src/commands/addbounty.cpp
src/commands/addpatrol.cpp
src/commands/addpilot.cpp
src/commands/addresident.cpp
src/commands/addsalary.cpp
src/commands/adjusttractorbeam.cpp
src/commands/advance.cpp
src/commands/affected.cpp
src/commands/afk.cpp
src/commands/ahall.cpp
src/commands/aid.cpp
src/commands/alias.cpp
src/commands/allclantalk.cpp
src/commands/allow.cpp
src/commands/allships.cpp
src/commands/allspeeders.cpp
src/commands/ammo.cpp
src/commands/ansi.cpp
src/commands/answer.cpp
src/commands/apply.cpp
src/commands/appoint.cpp
src/commands/appraise.cpp
src/commands/areas.cpp
src/commands/arena.cpp
src/commands/arm.cpp
src/commands/aset.cpp
src/commands/ask.cpp
src/commands/astat.cpp
src/commands/at.cpp
src/commands/auction.cpp
src/commands/authorize.cpp
src/commands/autopilot.cpp
src/commands/autorecharge.cpp
src/commands/autotrack.cpp
src/commands/avtalk.cpp
src/commands/awho.cpp
src/commands/backstab.cpp
src/commands/badname.cpp
src/commands/balzhur.cpp
src/commands/bamfin.cpp
src/commands/bamfout.cpp
src/commands/ban.cpp
src/commands/bank.cpp
src/commands/bash.cpp
src/commands/bashdoor.cpp
src/commands/beep.cpp
src/commands/beg.cpp
src/commands/berserk.cpp
src/commands/bestowarea.cpp
src/commands/bestow.cpp
src/commands/bet.cpp
src/commands/bind.cpp
src/commands/bio.cpp
src/commands/board.cpp
src/commands/boards.cpp
src/commands/bodybag.cpp
src/commands/bounties.cpp
src/commands/brandish.cpp
src/commands/bribe.cpp
src/commands/bset.cpp
src/commands/bstat.cpp
src/commands/bug.cpp
src/commands/bury.cpp
src/commands/buy.cpp
src/commands/buyhome.cpp
src/commands/buyship.cpp
src/commands/buyvendor.cpp
src/commands/buzz.cpp
src/commands/calculate.cpp
src/commands/calculatediff.cpp
src/commands/capture.cpp
src/commands/cast.cpp
src/commands/cedit.cpp
src/commands/chaff.cpp
src/commands/challenge.cpp
src/commands/channels.cpp
src/commands/chaos.cpp
src/commands/chat.cpp
src/commands/check_vnums.cpp
src/commands/circle.cpp
src/commands/clanbuyship.cpp
src/commands/clan_donate.cpp
src/commands/clanfunds.cpp
src/commands/clans.cpp
src/commands/clansellship.cpp
src/commands/clantalk.cpp
src/commands/clan_withdraw.cpp
src/commands/climb.cpp
src/commands/clone.cpp
src/commands/closebay.cpp
src/commands/close.cpp
src/commands/closehatch.cpp
src/commands/cmdtable.cpp
src/commands/collectgold.cpp
src/commands/commands.cpp
src/commands/compare.cpp
src/commands/config.cpp
src/commands/consider.cpp
src/commands/copyship.cpp
src/commands/credits.cpp
src/commands/cset.cpp
src/commands/cutdoor.cpp
src/commands/decline.cpp
src/commands/delay.cpp
src/commands/demote.cpp
src/commands/deny.cpp
src/commands/description.cpp
src/commands/destroy.cpp
src/commands/detrap.cpp
src/commands/diagnose.cpp
src/commands/dig.cpp
src/commands/disarm.cpp
src/commands/disconnect.cpp
src/commands/disguise.cpp
src/commands/dismiss.cpp
src/commands/dismount.cpp
src/commands/dmsg.cpp
src/commands/dnd.cpp
src/commands/dock.cpp
src/commands/down.cpp
src/commands/drag.cpp
src/commands/draw.cpp
src/commands/drink.cpp
src/commands/drive.cpp
src/commands/drop.cpp
src/commands/east.cpp
src/commands/eat.cpp
src/commands/echo.cpp
src/commands/eliteguard.cpp
src/commands/emote.cpp
src/commands/empower.cpp
src/commands/empty.cpp
src/commands/enter.cpp
src/commands/equipment.cpp
src/commands/examine.cpp
src/commands/exits.cpp
src/commands/fill.cpp
src/commands/fire.cpp
src/commands/firstaid.cpp
src/commands/fixchar.cpp
src/commands/flee.cpp
src/commands/focusalias.cpp
src/commands/foldarea.cpp
src/commands/follow.cpp
src/commands/forceclose.cpp
src/commands/force.cpp
src/commands/for.cpp
src/commands/form_password.cpp
src/commands/fquit.cpp
src/commands/freeze.cpp
src/commands/fuel.cpp
src/commands/gatherintelligence.cpp
src/commands/get.cpp
src/commands/give.cpp
src/commands/glance.cpp
src/commands/gold.cpp
src/commands/goto.cpp
src/commands/gouge.cpp
src/commands/group.cpp
src/commands/grub.cpp
src/commands/gtell.cpp
src/commands/guard.cpp
src/commands/hail.cpp
src/commands/hedit.cpp
src/commands/hell.cpp
src/commands/help.cpp
src/commands/hide.cpp
src/commands/hijack.cpp
src/commands/hitall.cpp
src/commands/hlist.cpp
src/commands/holylight.cpp
src/commands/homepage.cpp
src/commands/hset.cpp
src/commands/hyperspace.cpp
src/commands/i103.cpp
src/commands/i104.cpp
src/commands/i105.cpp
src/commands/idea.cpp
src/commands/immortalize.cpp
src/commands/immtalk.cpp
src/commands/induct.cpp
src/commands/info.cpp
src/commands/installarea.cpp
src/commands/instaroom.cpp
src/commands/instazone.cpp
src/commands/inventory.cpp
src/commands/invis.cpp
src/commands/invite.cpp
src/commands/jail.cpp
src/commands/jumpvector.cpp
src/commands/junk.cpp
src/commands/kick.cpp
src/commands/kill.cpp
src/commands/land.cpp
src/commands/languages.cpp
src/commands/last.cpp
src/commands/launch.cpp
src/commands/leave.cpp
src/commands/leaveship.cpp
src/commands/level.cpp
src/commands/light.cpp
src/commands/list.cpp
src/commands/litterbug.cpp
src/commands/loadarea.cpp
src/commands/loadup.cpp
src/commands/lock.cpp
src/commands/log.cpp
src/commands/look.cpp
src/commands/low_purge.cpp
src/commands/mailroom.cpp
src/commands/makearmor.cpp
src/commands/makeblade.cpp
src/commands/makeblaster.cpp
src/commands/makeboard.cpp
src/commands/makebowcaster.cpp
src/commands/makeclan.cpp
src/commands/makecomlink.cpp
src/commands/makecontainer.cpp
src/commands/makedisguise.cpp
src/commands/makeglowrod.cpp
src/commands/makegrenade.cpp
src/commands/makeguild.cpp
src/commands/makejewelry.cpp
src/commands/makelandmine.cpp
src/commands/makelightsaber.cpp
src/commands/makeplanet.cpp
src/commands/makerepair.cpp
src/commands/makeshield.cpp
src/commands/makeship.cpp
src/commands/makeshop.cpp
src/commands/makeshuttle.cpp
src/commands/makespaceobject.cpp
src/commands/makespice.cpp
src/commands/makewizlist.cpp
src/commands/massign.cpp
src/commands/masspropaganda.cpp
src/commands/mcreate.cpp
src/commands/members.cpp
src/commands/memory.cpp
src/commands/mfind.cpp
src/commands/mine.cpp
src/commands/minvoke.cpp
src/commands/mlist.cpp
src/commands/mount.cpp
src/commands/mpedit.cpp
src/commands/mpfind.cpp
src/commands/mpstat.cpp
src/commands/mset.cpp
src/commands/mstat.cpp
src/commands/murder.cpp
src/commands/music.cpp
src/commands/mwhere.cpp
src/commands/name.cpp
src/commands/newbiechat.cpp
src/commands/newbieset.cpp
src/commands/newzones.cpp
src/commands/noemote.cpp
src/commands/nohelps.cpp
src/commands/noresolve.cpp
src/commands/north.cpp
src/commands/northeast.cpp
src/commands/northwest.cpp
src/commands/notell.cpp
src/commands/noteroom.cpp
src/commands/notitle.cpp
src/commands/oassign.cpp
src/commands/ocreate.cpp
src/commands/ofind.cpp
src/commands/ogrub.cpp
src/commands/oinvoke.cpp
src/commands/oldscore.cpp
src/commands/olist.cpp
src/commands/ooc.cpp
src/commands/opedit.cpp
src/commands/openbay.cpp
src/commands/open.cpp
src/commands/openhatch.cpp
src/commands/opfind.cpp
src/commands/opstat.cpp
src/commands/order.cpp
src/commands/oset.cpp
src/commands/ostat.cpp
src/commands/outcast.cpp
src/commands/override.cpp
src/commands/owhere.cpp
src/commands/pardon.cpp
src/commands/password.cpp
src/commands/peace.cpp
src/commands/pick.cpp
src/commands/pickshiplock.cpp
src/commands/placevendor.cpp
src/commands/planets.cpp
src/commands/pluogus.cpp
src/commands/poisonweapon.cpp
src/commands/postguard.cpp
src/commands/practice.cpp
src/commands/pricevendor.cpp
src/commands/prompt.cpp
src/commands/propaganda.cpp
src/commands/pull.cpp
src/commands/punch.cpp
src/commands/purge.cpp
src/commands/push.cpp
src/commands/put.cpp
src/commands/quaff.cpp
src/commands/quit.cpp
src/commands/radar.cpp
src/commands/rank.cpp
src/commands/rassign.cpp
src/commands/rat.cpp
src/commands/rdelete.cpp
src/commands/reboot.cpp
src/commands/recall.cpp
src/commands/recharge.cpp
src/commands/recho.cpp
src/commands/redit.cpp
src/commands/regoto.cpp
src/commands/reinforcements.cpp
src/commands/reload.cpp
src/commands/rembounty.cpp
src/commands/remove.cpp
src/commands/rempilot.cpp
src/commands/remresident.cpp
src/commands/renameship.cpp
src/commands/repair.cpp
src/commands/repairset.cpp
src/commands/repairship.cpp
src/commands/repairshops.cpp
src/commands/repairstat.cpp
src/commands/reply.cpp
src/commands/report.cpp
src/commands/request.cpp
src/commands/rescue.cpp
src/commands/reset.cpp
src/commands/resetship.cpp
src/commands/resign.cpp
src/commands/rest.cpp
src/commands/restore.cpp
src/commands/restoretime.cpp
src/commands/restrict.cpp
src/commands/retire.cpp
src/commands/retran.cpp
src/commands/return.cpp
src/commands/revert.cpp
src/commands/rgrub.cpp
src/commands/rlist.cpp
src/commands/roster.cpp
src/commands/rpedit.cpp
src/commands/rpfind.cpp
src/commands/rpstat.cpp
src/commands/rreset.cpp
src/commands/rstat.cpp
src/commands/sabotage.cpp
src/commands/savearea.cpp
src/commands/save.cpp
src/commands/say.cpp
src/commands/scan.cpp
src/commands/scatter.cpp
src/commands/score.cpp
src/commands/search.cpp
src/commands/sedit.cpp
src/commands/seduce.cpp
src/commands/sell.cpp
src/commands/sellhome.cpp
src/commands/sellship.cpp
src/commands/setblaster.cpp
src/commands/set_boot_time.cpp
src/commands/setclan.cpp
src/commands/setplanet.cpp
src/commands/setship.cpp
src/commands/setshuttle.cpp
src/commands/setspaceobject.cpp
src/commands/ships.cpp
src/commands/shiptalk.cpp
src/commands/shiptrack.cpp
src/commands/shops.cpp
src/commands/shopset.cpp
src/commands/shopstat.cpp
src/commands/shout.cpp
src/commands/shove.cpp
src/commands/showclan.cpp
src/commands/showlayers.cpp
src/commands/showplanet.cpp
src/commands/showship.cpp
src/commands/showshuttle.cpp
src/commands/showspaceobject.cpp
src/commands/showstatistic.cpp
src/commands/shutdown.cpp
src/commands/silence.cpp
src/commands/sit.cpp
src/commands/skin.cpp
src/commands/sla.cpp
src/commands/slay.cpp
src/commands/sleep.cpp
src/commands/slist.cpp
src/commands/slookup.cpp
src/commands/smalltalk.cpp
src/commands/smoke.cpp
src/commands/sneak.cpp
src/commands/snipe.cpp
src/commands/snoop.cpp
src/commands/sober.cpp
src/commands/socials.cpp
src/commands/south.cpp
src/commands/southeast.cpp
src/commands/southwest.cpp
src/commands/spaceobjects.cpp
src/commands/spacetalk.cpp
src/commands/speak.cpp
src/commands/specialforces.cpp
src/commands/speeders.cpp
src/commands/split.cpp
src/commands/sset.cpp
src/commands/stand.cpp
src/commands/status.cpp
src/commands/steal.cpp
src/commands/study.cpp
src/commands/stun.cpp
src/commands/suicide.cpp
src/commands/switch.cpp
src/commands/systemtalk.cpp
src/commands/takedrug.cpp
src/commands/tamp.cpp
src/commands/target.cpp
src/commands/teach.cpp
src/commands/tell.cpp
src/commands/test.cpp
src/commands/throw.cpp
src/commands/timecmd.cpp
src/commands/time.cpp
src/commands/title.cpp
src/commands/toplevel.cpp
src/commands/torture.cpp
src/commands/track.cpp
src/commands/tractorbeam.cpp
src/commands/train.cpp
src/commands/trajectoryactual.cpp
src/commands/trajectory.cpp
src/commands/transfer.cpp
src/commands/transship.cpp
src/commands/trust.cpp
src/commands/typo.cpp
src/commands/undock.cpp
src/commands/unfocusalias.cpp
src/commands/unhell.cpp
src/commands/unjail.cpp
src/commands/unlock.cpp
src/commands/unsilence.cpp
src/commands/up.cpp
src/commands/use.cpp
src/commands/users.cpp
src/commands/value.cpp
src/commands/vassign.cpp
src/commands/viewskills.cpp
src/commands/visible.cpp
src/commands/vnums.cpp
src/commands/vsearch.cpp
src/commands/wake.cpp
src/commands/wartalk.cpp
src/commands/wear.cpp
src/commands/weather.cpp
src/commands/west.cpp
src/commands/where.cpp
src/commands/who.cpp
src/commands/whois.cpp
src/commands/wimpy.cpp
src/commands/wizhelp.cpp
src/commands/wizlist.cpp
src/commands/wizlock.cpp
src/commands/yell.cpp
src/commands/zap.cpp
src/commands/zones.cpp
src/mpcommands/mpapplyb.cpp
src/mpcommands/mpapply.cpp
src/mpcommands/mpasound.cpp
src/mpcommands/mpat.cpp
src/mpcommands/mpclosepassage.cpp
src/mpcommands/mpdamage.cpp
src/mpcommands/mpdeposit.cpp
src/mpcommands/mpdream.cpp
src/mpcommands/mpechoaround.cpp
src/mpcommands/mpechoat.cpp
src/mpcommands/mpecho.cpp
src/mpcommands/mpforce.cpp
src/mpcommands/mpgain.cpp
src/mpcommands/mpgoto.cpp
src/mpcommands/mpinvis.cpp
src/mpcommands/mpjunk.cpp
src/mpcommands/mpkill.cpp
src/mpcommands/mpmload.cpp
src/mpcommands/mpnothing.cpp
src/mpcommands/mpoload.cpp
src/mpcommands/mpopenpassage.cpp
src/mpcommands/mppurge.cpp
src/mpcommands/mprestore.cpp
src/mpcommands/mpslay.cpp
src/mpcommands/mptransfer.cpp
src/mpcommands/mpwithdraw.cpp
src/repos/arearepository.cpp
src/repos/badnamerepository.cpp
src/repos/banrepository.cpp
src/repos/boardrepository.cpp
src/repos/bountyrepository.cpp
src/repos/clanrepository.cpp
src/repos/descriptorrepository.cpp
src/repos/dirty.cpp
src/repos/helprepository.cpp
src/repos/lua_arearepository.cpp
src/repos/lua_homerepository.cpp
src/repos/lua_storeroomrepository.cpp
src/repos/lua_vendorrepository.cpp
src/repos/objectrepository.cpp
src/repos/planetrepository.cpp
src/repos/playerrepository.cpp
src/repos/shiprepository.cpp
src/repos/shoprepository.cpp
src/repos/shuttlerepository.cpp
src/repos/skillrepository.cpp
src/repos/socialrepository.cpp
src/repos/spaceobjectrepository.cpp
src/repos/storeroomrepository.cpp
src/special/auth.cpp
src/special/clanguard.cpp
src/special/customsalcohol.cpp
src/special/customssmut.cpp
src/special/customsspice.cpp
src/special/customsweapons.cpp
src/special/darkjedi.cpp
src/special/fido.cpp
src/special/guardian.cpp
src/special/janitor.cpp
src/special/jedi.cpp
src/special/jedihealer.cpp
src/special/newbiepilot.cpp
src/special/poison.cpp
src/special/policeattack.cpp
src/special/police.cpp
src/special/policefine.cpp
src/special/policejail.cpp
src/special/policeundercover.cpp
src/special/rebeltrooper.cpp
src/special/stormtrooper.cpp
src/special/thief.cpp
src/spells/affectchar.cpp
src/spells/affect.cpp
src/spells/areaattack.cpp
src/spells/attack.cpp
src/spells/blacklightning.cpp
src/spells/blindness.cpp
src/spells/causecritical.cpp
src/spells/causelight.cpp
src/spells/causeserious.cpp
src/spells/charmperson.cpp
src/spells/createmob.cpp
src/spells/createobj.cpp
src/spells/cureblindness.cpp
src/spells/curepoison.cpp
src/spells/detectpoison.cpp
src/spells/dispelevil.cpp
src/spells/dispelmagic.cpp
src/spells/dream.cpp
src/spells/earthquake.cpp
src/spells/energydrain.cpp
src/spells/farsight.cpp
src/spells/fireball.cpp
src/spells/flamestrike.cpp
src/spells/handofchaos.cpp
src/spells/harm.cpp
src/spells/identify.cpp
src/spells/invis.cpp
src/spells/knowalignment.cpp
src/spells/lightningbolt.cpp
src/spells/objinv.cpp
src/spells/poison.cpp
src/spells/possess.cpp
src/spells/removeinvis.cpp
src/spells/removetrap.cpp
src/spells/scorchingsurge.cpp
src/spells/shockinggrasp.cpp
src/spells/sleep.cpp
src/spells/smaug.cpp
src/spells/ventriloquate.cpp
src/spells/weaken.cpp)

if(WIN32)
  target_link_libraries(swrip utility colorparser lua WS2_32)
  set(BUILD_SHARED_LIBS ON)
  set(PYTHON py)
else()
  target_link_libraries(swrip utility colorparser lua stdc++fs dl)
  set(PYTHON python3)
endif()

target_compile_features(mud PUBLIC cxx_std_17)
target_compile_options(mud
  PRIVATE $<$<CXX_COMPILER_ID:GNU>:-Werror -Wall -Wformat-security -Wshadow -Winline -Wpointer-arith -Wcast-align -Wredundant-decls -Wextra -Wno-unused-parameter -Wno-implicit-fallthrough -Wno-sign-compare -Wno-write-strings -Wno-format-truncation>
  PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/D_CRT_SECURE_NO_WARNINGS /D_CRT_NONSTDC_NO_DEPRECATE /wd4244>
  )

configure_file(${CMAKE_SOURCE_DIR}/cmake/GoogleTest-CMakeLists.txt.in ${CMAKE_BINARY_DIR}/googletest-download/CMakeLists.txt)
execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
  RESULT_VARIABLE result
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
if(result)
  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
endif()
execute_process(COMMAND ${CMAKE_COMMAND} --build .
  RESULT_VARIABLE result
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
if(result)
  message(FATAL_ERROR "Build step for googletest failed: ${result}")
endif()

# Add googletest directly to our build. This defines
# the gtest and gtest_main targets.
add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src
                 ${CMAKE_BINARY_DIR}/googletest-build
                 EXCLUDE_FROM_ALL)
add_subdirectory(libs/colorparser)
add_subdirectory(libs/utility)
add_subdirectory(libs/3rdparty/lua)
add_subdirectory(test)

# Generate src/tables.cpp file.
add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/tables.cpp
                   COMMAND rm -f ${CMAKE_CURRENT_SOURCE_DIR}/src/tables.cpp
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_custom_target(tables_cpp ALL
                  COMMAND ${PYTHON} make_lookup_table.py ${CMAKE_CURRENT_SOURCE_DIR}/src/tables.cpp
                  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/tables.cpp
                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_dependencies(mud tables_cpp)
