cmake_minimum_required(VERSION 2.8.9)
project(mud)
include_directories(../libs .)
set(PROJECT_LINK_LIBS libcolorparser.so libutility.so)
link_directories(../libs/colorparser ../libs/utility)
set(CMAKE_BUILD_TYPE Debug)
set(GCC_WARNING_FLAGS "-Wall -Wshadow -Wformat-security -Winline -Wpointer-arith -Wcast-align -Wredundant-decls -Werror -Wwrite-strings -Wextra -Wno-char-subscripts -Wno-unused-parameter -Wno-implicit-fallthrough")
set(GCC_STD_FLAG "-std=c++14")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_WARNING_FLAGS} ${GCC_STD_FLAG}")
set(SOURCES
  act_comm.cpp
  act_info.cpp
  act_move.cpp
  act_obj.cpp
  act_wiz.cpp
  alias.cpp
  area.cpp
  arena.cpp
  badname.cpp
  ban.cpp
  board.cpp
  bounty.cpp
  build.cpp
  character.cpp
  clan.cpp
  command.cpp
  comm.cpp
  comments.cpp
  const.cpp
  copyover.cpp
  craft.cpp
  db.cpp
  descriptor.cpp
  editor.cpp
  fight.cpp
  fslogger.cpp
  grub.cpp
  handler.cpp
  help.cpp
  imc.cpp
  interp.cpp
  magic.cpp
  makeobjs.cpp
  mapper.cpp
  misc.cpp
  missile.cpp
  mprog.cpp
  mud_prog.cpp
  nanny.cpp
  object.cpp
  pcdata.cpp
  planet.cpp
  protomob.cpp
  protoobject.cpp
  reset.cpp
  room.cpp
  save.cpp
  script.cpp
  ship.cpp
  shop.cpp
  shuttle.cpp
  skill.cpp
  skills.cpp
  social.cpp
  spaceobject.cpp
  special.cpp
  systemdata.cpp
  tables.cpp
  track.cpp
  turret.cpp
  update.cpp
  vector3_aux.cpp
  commands/aassign.cpp
  commands/accelerate.cpp
  commands/accept.cpp
  commands/addbounty.cpp
  commands/addpatrol.cpp
  commands/addpilot.cpp
  commands/addresident.cpp
  commands/addsalary.cpp
  commands/adjusttractorbeam.cpp
  commands/advance.cpp
  commands/affected.cpp
  commands/afk.cpp
  commands/ahall.cpp
  commands/aid.cpp
  commands/alias.cpp
  commands/allclantalk.cpp
  commands/allow.cpp
  commands/allships.cpp
  commands/allspeeders.cpp
  commands/ammo.cpp
  commands/ansi.cpp
  commands/answer.cpp
  commands/apply.cpp
  commands/appoint.cpp
  commands/appraise.cpp
  commands/areas.cpp
  commands/arena.cpp
  commands/arm.cpp
  commands/aset.cpp
  commands/ask.cpp
  commands/astat.cpp
  commands/at.cpp
  commands/auction.cpp
  commands/authorize.cpp
  commands/autopilot.cpp
  commands/autorecharge.cpp
  commands/autotrack.cpp
  commands/avtalk.cpp
  commands/awho.cpp
  commands/backstab.cpp
  commands/badname.cpp
  commands/balzhur.cpp
  commands/bamfin.cpp
  commands/bamfout.cpp
  commands/ban.cpp
  commands/bank.cpp
  commands/bash.cpp
  commands/bashdoor.cpp
  commands/beep.cpp
  commands/beg.cpp
  commands/berserk.cpp
  commands/bestowarea.cpp
  commands/bestow.cpp
  commands/bet.cpp
  commands/bind.cpp
  commands/bio.cpp
  commands/board.cpp
  commands/boards.cpp
  commands/bodybag.cpp
  commands/bounties.cpp
  commands/brandish.cpp
  commands/bribe.cpp
  commands/bset.cpp
  commands/bstat.cpp
  commands/bug.cpp
  commands/bury.cpp
  commands/buy.cpp
  commands/buyhome.cpp
  commands/buyship.cpp
  commands/buyvendor.cpp
  commands/buzz.cpp
  commands/calculate.cpp
  commands/calculatediff.cpp
  commands/capture.cpp
  commands/cast.cpp
  commands/cedit.cpp
  commands/chaff.cpp
  commands/challenge.cpp
  commands/channels.cpp
  commands/chaos.cpp
  commands/chat.cpp
  commands/check_vnums.cpp
  commands/circle.cpp
  commands/clanbuyship.cpp
  commands/clan_donate.cpp
  commands/clanfunds.cpp
  commands/clans.cpp
  commands/clansellship.cpp
  commands/clantalk.cpp
  commands/clan_withdraw.cpp
  commands/climb.cpp
  commands/clone.cpp
  commands/closebay.cpp
  commands/close.cpp
  commands/closehatch.cpp
  commands/cmdtable.cpp
  commands/collectgold.cpp
  commands/commands.cpp
  commands/compare.cpp
  commands/config.cpp
  commands/consider.cpp
  commands/copyship.cpp
  commands/credits.cpp
  commands/cset.cpp
  commands/cutdoor.cpp
  commands/decline.cpp
  commands/delay.cpp
  commands/demote.cpp
  commands/deny.cpp
  commands/description.cpp
  commands/destroy.cpp
  commands/detrap.cpp
  commands/diagnose.cpp
  commands/dig.cpp
  commands/disarm.cpp
  commands/disconnect.cpp
  commands/disguise.cpp
  commands/dismiss.cpp
  commands/dismount.cpp
  commands/dmsg.cpp
  commands/dnd.cpp
  commands/dock.cpp
  commands/down.cpp
  commands/drag.cpp
  commands/draw.cpp
  commands/drink.cpp
  commands/drive.cpp
  commands/drop.cpp
  commands/east.cpp
  commands/eat.cpp
  commands/echo.cpp
  commands/eliteguard.cpp
  commands/emote.cpp
  commands/empower.cpp
  commands/empty.cpp
  commands/enter.cpp
  commands/equipment.cpp
  commands/examine.cpp
  commands/exits.cpp
  commands/fill.cpp
  commands/fire.cpp
  commands/firstaid.cpp
  commands/fixchar.cpp
  commands/flee.cpp
  commands/focusalias.cpp
  commands/foldarea.cpp
  commands/follow.cpp
  commands/forceclose.cpp
  commands/force.cpp
  commands/for.cpp
  commands/form_password.cpp
  commands/fquit.cpp
  commands/freeze.cpp
  commands/fuel.cpp
  commands/gatherintelligence.cpp
  commands/get.cpp
  commands/give.cpp
  commands/glance.cpp
  commands/gold.cpp
  commands/goto.cpp
  commands/gouge.cpp
  commands/group.cpp
  commands/grub.cpp
  commands/gtell.cpp
  commands/guard.cpp
  commands/hail.cpp
  commands/hedit.cpp
  commands/hell.cpp
  commands/help.cpp
  commands/hide.cpp
  commands/hijack.cpp
  commands/hitall.cpp
  commands/hlist.cpp
  commands/holylight.cpp
  commands/homepage.cpp
  commands/hset.cpp
  commands/hyperspace.cpp
  commands/i103.cpp
  commands/i104.cpp
  commands/i105.cpp
  commands/idea.cpp
  commands/immortalize.cpp
  commands/immtalk.cpp
  commands/induct.cpp
  commands/info.cpp
  commands/installarea.cpp
  commands/instaroom.cpp
  commands/instazone.cpp
  commands/inventory.cpp
  commands/invis.cpp
  commands/invite.cpp
  commands/jail.cpp
  commands/jumpvector.cpp
  commands/junk.cpp
  commands/kick.cpp
  commands/kill.cpp
  commands/land.cpp
  commands/languages.cpp
  commands/last.cpp
  commands/launch.cpp
  commands/leave.cpp
  commands/leaveship.cpp
  commands/level.cpp
  commands/light.cpp
  commands/list.cpp
  commands/litterbug.cpp
  commands/loadarea.cpp
  commands/loadup.cpp
  commands/lock.cpp
  commands/log.cpp
  commands/look.cpp
  commands/low_purge.cpp
  commands/mailroom.cpp
  commands/makearmor.cpp
  commands/makeblade.cpp
  commands/makeblaster.cpp
  commands/makeboard.cpp
  commands/makebowcaster.cpp
  commands/makeclan.cpp
  commands/makecomlink.cpp
  commands/makecontainer.cpp
  commands/makedisguise.cpp
  commands/makeglowrod.cpp
  commands/makegrenade.cpp
  commands/makeguild.cpp
  commands/makejewelry.cpp
  commands/makelandmine.cpp
  commands/makelightsaber.cpp
  commands/makeplanet.cpp
  commands/makerepair.cpp
  commands/makeshield.cpp
  commands/makeship.cpp
  commands/makeshop.cpp
  commands/makeshuttle.cpp
  commands/makespaceobject.cpp
  commands/makespice.cpp
  commands/makewizlist.cpp
  commands/massign.cpp
  commands/masspropaganda.cpp
  commands/mcreate.cpp
  commands/members.cpp
  commands/memory.cpp
  commands/mfind.cpp
  commands/mine.cpp
  commands/minvoke.cpp
  commands/mlist.cpp
  commands/mount.cpp
  commands/mpedit.cpp
  commands/mpfind.cpp
  commands/mpstat.cpp
  commands/mset.cpp
  commands/mstat.cpp
  commands/murder.cpp
  commands/music.cpp
  commands/mwhere.cpp
  commands/name.cpp
  commands/newbiechat.cpp
  commands/newbieset.cpp
  commands/newzones.cpp
  commands/noemote.cpp
  commands/nohelps.cpp
  commands/noresolve.cpp
  commands/north.cpp
  commands/northeast.cpp
  commands/northwest.cpp
  commands/notell.cpp
  commands/noteroom.cpp
  commands/notitle.cpp
  commands/oassign.cpp
  commands/ocreate.cpp
  commands/ofind.cpp
  commands/ogrub.cpp
  commands/oinvoke.cpp
  commands/oldscore.cpp
  commands/olist.cpp
  commands/ooc.cpp
  commands/opedit.cpp
  commands/openbay.cpp
  commands/open.cpp
  commands/openhatch.cpp
  commands/opfind.cpp
  commands/opstat.cpp
  commands/order.cpp
  commands/oset.cpp
  commands/ostat.cpp
  commands/outcast.cpp
  commands/override.cpp
  commands/owhere.cpp
  commands/pardon.cpp
  commands/password.cpp
  commands/peace.cpp
  commands/pick.cpp
  commands/pickshiplock.cpp
  commands/placevendor.cpp
  commands/planets.cpp
  commands/pluogus.cpp
  commands/poisonweapon.cpp
  commands/postguard.cpp
  commands/practice.cpp
  commands/pricevendor.cpp
  commands/prompt.cpp
  commands/propaganda.cpp
  commands/pull.cpp
  commands/punch.cpp
  commands/purge.cpp
  commands/push.cpp
  commands/put.cpp
  commands/quaff.cpp
  commands/quit.cpp
  commands/radar.cpp
  commands/rank.cpp
  commands/rassign.cpp
  commands/rat.cpp
  commands/rdelete.cpp
  commands/reboot.cpp
  commands/recall.cpp
  commands/recharge.cpp
  commands/recho.cpp
  commands/redit.cpp
  commands/regoto.cpp
  commands/reinforcements.cpp
  commands/reload.cpp
  commands/rembounty.cpp
  commands/remove.cpp
  commands/rempilot.cpp
  commands/remresident.cpp
  commands/renameship.cpp
  commands/repair.cpp
  commands/repairset.cpp
  commands/repairship.cpp
  commands/repairshops.cpp
  commands/repairstat.cpp
  commands/reply.cpp
  commands/report.cpp
  commands/request.cpp
  commands/rescue.cpp
  commands/reset.cpp
  commands/resetship.cpp
  commands/resign.cpp
  commands/rest.cpp
  commands/restore.cpp
  commands/restoretime.cpp
  commands/restrict.cpp
  commands/retire.cpp
  commands/retran.cpp
  commands/return.cpp
  commands/revert.cpp
  commands/rgrub.cpp
  commands/rlist.cpp
  commands/roster.cpp
  commands/rpedit.cpp
  commands/rpfind.cpp
  commands/rpstat.cpp
  commands/rreset.cpp
  commands/rstat.cpp
  commands/sabotage.cpp
  commands/savearea.cpp
  commands/save.cpp
  commands/say.cpp
  commands/scan.cpp
  commands/scatter.cpp
  commands/score.cpp
  commands/search.cpp
  commands/sedit.cpp
  commands/seduce.cpp
  commands/sell.cpp
  commands/sellhome.cpp
  commands/sellship.cpp
  commands/setblaster.cpp
  commands/set_boot_time.cpp
  commands/setclan.cpp
  commands/setplanet.cpp
  commands/setship.cpp
  commands/setshuttle.cpp
  commands/setspaceobject.cpp
  commands/ships.cpp
  commands/shiptalk.cpp
  commands/shiptrack.cpp
  commands/shops.cpp
  commands/shopset.cpp
  commands/shopstat.cpp
  commands/shout.cpp
  commands/shove.cpp
  commands/showclan.cpp
  commands/showlayers.cpp
  commands/showplanet.cpp
  commands/showship.cpp
  commands/showshuttle.cpp
  commands/showspaceobject.cpp
  commands/showstatistic.cpp
  commands/shutdown.cpp
  commands/silence.cpp
  commands/sit.cpp
  commands/skin.cpp
  commands/sla.cpp
  commands/slay.cpp
  commands/sleep.cpp
  commands/slist.cpp
  commands/slookup.cpp
  commands/smalltalk.cpp
  commands/smoke.cpp
  commands/sneak.cpp
  commands/snipe.cpp
  commands/snoop.cpp
  commands/sober.cpp
  commands/socials.cpp
  commands/south.cpp
  commands/southeast.cpp
  commands/southwest.cpp
  commands/spaceobjects.cpp
  commands/spacetalk.cpp
  commands/speak.cpp
  commands/specialforces.cpp
  commands/speeders.cpp
  commands/split.cpp
  commands/sset.cpp
  commands/stand.cpp
  commands/status.cpp
  commands/steal.cpp
  commands/study.cpp
  commands/stun.cpp
  commands/suicide.cpp
  commands/switch.cpp
  commands/systemtalk.cpp
  commands/takedrug.cpp
  commands/tamp.cpp
  commands/target.cpp
  commands/teach.cpp
  commands/tell.cpp
  commands/test.cpp
  commands/throw.cpp
  commands/timecmd.cpp
  commands/time.cpp
  commands/title.cpp
  commands/toplevel.cpp
  commands/torture.cpp
  commands/track.cpp
  commands/tractorbeam.cpp
  commands/train.cpp
  commands/trajectoryactual.cpp
  commands/trajectory.cpp
  commands/transfer.cpp
  commands/transship.cpp
  commands/trust.cpp
  commands/typo.cpp
  commands/undock.cpp
  commands/unfocusalias.cpp
  commands/unfoldarea.cpp
  commands/unhell.cpp
  commands/unjail.cpp
  commands/unlock.cpp
  commands/unsilence.cpp
  commands/up.cpp
  commands/use.cpp
  commands/users.cpp
  commands/value.cpp
  commands/vassign.cpp
  commands/viewskills.cpp
  commands/visible.cpp
  commands/vnums.cpp
  commands/vsearch.cpp
  commands/wake.cpp
  commands/wartalk.cpp
  commands/wear.cpp
  commands/weather.cpp
  commands/west.cpp
  commands/where.cpp
  commands/who.cpp
  commands/whois.cpp
  commands/wimpy.cpp
  commands/wizhelp.cpp
  commands/wizlist.cpp
  commands/wizlock.cpp
  commands/yell.cpp
  commands/zap.cpp
  commands/zones.cpp
  mpcommands/mpapplyb.cpp
  mpcommands/mpapply.cpp
  mpcommands/mpasound.cpp
  mpcommands/mpat.cpp
  mpcommands/mpclosepassage.cpp
  mpcommands/mpdamage.cpp
  mpcommands/mpdeposit.cpp
  mpcommands/mpdream.cpp
  mpcommands/mpechoaround.cpp
  mpcommands/mpechoat.cpp
  mpcommands/mpecho.cpp
  mpcommands/mpforce.cpp
  mpcommands/mpgain.cpp
  mpcommands/mpgoto.cpp
  mpcommands/mpinvis.cpp
  mpcommands/mpjunk.cpp
  mpcommands/mpkill.cpp
  mpcommands/mpmload.cpp
  mpcommands/mpnothing.cpp
  mpcommands/mpoload.cpp
  mpcommands/mpopenpassage.cpp
  mpcommands/mppurge.cpp
  mpcommands/mprestore.cpp
  mpcommands/mpslay.cpp
  mpcommands/mptransfer.cpp
  mpcommands/mpwithdraw.cpp
  repos/badnamerepository.cpp
  repos/banrepository.cpp
  repos/boardrepository.cpp
  repos/bountyrepository.cpp
  repos/clanrepository.cpp
  repos/descriptorrepository.cpp
  repos/helprepository.cpp
  repos/objectrepository.cpp
  repos/planetrepository.cpp
  repos/playerrepository.cpp
  repos/shiprepository.cpp
  repos/shoprepository.cpp
  repos/shuttlerepository.cpp
  repos/skillrepository.cpp
  repos/socialrepository.cpp
  repos/spaceobjectrepository.cpp
  special/auth.cpp
  special/clanguard.cpp
  special/customsalcohol.cpp
  special/customssmut.cpp
  special/customsspice.cpp
  special/customsweapons.cpp
  special/darkjedi.cpp
  special/fido.cpp
  special/guardian.cpp
  special/janitor.cpp
  special/jedi.cpp
  special/jedihealer.cpp
  special/newbiepilot.cpp
  special/poison.cpp
  special/policeattack.cpp
  special/police.cpp
  special/policefine.cpp
  special/policejail.cpp
  special/policeundercover.cpp
  special/rebeltrooper.cpp
  special/stormtrooper.cpp
  special/thief.cpp
  spells/affectchar.cpp
  spells/affect.cpp
  spells/areaattack.cpp
  spells/attack.cpp
  spells/blacklightning.cpp
  spells/blindness.cpp
  spells/causecritical.cpp
  spells/causelight.cpp
  spells/causeserious.cpp
  spells/charmperson.cpp
  spells/createmob.cpp
  spells/createobj.cpp
  spells/cureblindness.cpp
  spells/curepoison.cpp
  spells/detectpoison.cpp
  spells/dispelevil.cpp
  spells/dispelmagic.cpp
  spells/dream.cpp
  spells/earthquake.cpp
  spells/energydrain.cpp
  spells/farsight.cpp
  spells/fireball.cpp
  spells/flamestrike.cpp
  spells/handofchaos.cpp
  spells/harm.cpp
  spells/identify.cpp
  spells/invis.cpp
  spells/knowalignment.cpp
  spells/lightningbolt.cpp
  spells/objinv.cpp
  spells/poison.cpp
  spells/possess.cpp
  spells/removeinvis.cpp
  spells/removetrap.cpp
  spells/scorchingsurge.cpp
  spells/shockinggrasp.cpp
  spells/sleep.cpp
  spells/smaug.cpp
  spells/ventriloquate.cpp
  spells/weaken.cpp)

add_library(mud SHARED ${SOURCES})
target_link_libraries(mud ${PROJECT_LINK_LIBS})
install(TARGETS mud DESTINATION /usr/lib)
add_custom_command(TARGET mud POST_BUILD
  COMMAND cmake .
  COMMAND make
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)
add_custom_command(TARGET mud POST_BUILD
  COMMAND ./test
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)
